--- a/platformio.ini
+++ b/platformio.ini
@@ -118,7 +118,7 @@ build_flags =
     -std=gnu++2a
     -DNATIVE
 test_filter =
-    #language/test_parser
+    language/test_parser
     #language/test_fluent
     #structure/kernel/test_f_scheduler
 test_ignore =
