massive refactor of build infrasatructure. not sure I did much towards making code-test-loop faster, but I learned a lot about CMake. Native build can now use Unity independent of PlatformIO.

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,7 +74,6 @@ framework = arduino
 board_build.filesystem = littlefs
 test_framework = unity
 extra_scripts = pre:scripts/environment.py
-build_src_filter = +<*>
 lib_deps =
     WiFi # necessary for ESPTelnet
     ArduinoOTA
@@ -104,14 +103,6 @@ framework =
 lib_deps =
 #    eclipse/Paho @ ^1.0.0
 upload_protocol =
-build_src_filter =
-    +<fhatos.hpp>
-    +<process/native/**.*>
-    +<process/*.hpp>
-    +<process/router/**.*>
-    +<language/**.*>
-    +<structure/**.*>
-    +<main.cpp>
 build_flags =
     ${common.build_flags}
     ${env.build_flags}
@@ -122,6 +113,7 @@ test_filter =
     #language/test_fluent
     #structure/kernel/test_f_scheduler
 test_ignore =
+    CMakeFiles/**.*
     #util/test_mutex
     #structure/test_furi
     #language/test_parser
@@ -139,6 +131,7 @@ extends = esp32
 test_filter =
     #language/test_parser
 test_ignore =
+    CMakeFiles/**.*
 #util/test_mutex
 #structure/test_furi
 #language/test_parser
