added Obj.cast() to provide easy Utype casting. More updates to CMakeLists build. Tests around utype equality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 TARGET_SOURCES(${PROJECT_NAME} PRIVATE src/main.cpp)
 TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_std_20)
 TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE NATIVE)
-CMAKE_PRINT_VARIABLES(PROJECT_NAME CMAKE_CXX_COMPILER_ID CMAKE_CXX_COMPILER_VERSION)
+CMAKE_PRINT_VARIABLES(PROJECT_NAME CMAKE_SOURCE_DIR CMAKE_INSTALL_PREFIX CMAKE_CXX_COMPILER_ID CMAKE_CXX_COMPILER_VERSION)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ####################################
