--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,16 +27,18 @@ ENDIF ()
 ######## PROJECT LIBRARY
 MESSAGE(CHECK_START "${.y}CMaking ${PROJECT_NAME} Library${..}")
 INCLUDE_DIRECTORIES(src include)
-# set(SOURCE_FILES src/main.cpp)
 ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
+        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build"
+        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build"
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build"
         OUTPUT_NAME ${PROJECT_NAME}
         SUFFIX ".out"
 )
 TARGET_SOURCES(${PROJECT_NAME} PRIVATE src/main.cpp)
 TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_std_20)
 TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE NATIVE)
-CMAKE_PRINT_VARIABLES(PROJECT_NAME CMAKE_SOURCE_DIR CMAKE_INSTALL_PREFIX CMAKE_CXX_COMPILER_ID CMAKE_CXX_COMPILER_VERSION)
+CMAKE_PRINT_VARIABLES(PROJECT_NAME CMAKE_SOURCE_DIR CMAKE_BINARY_DIR CMAKE_INSTALL_PREFIX CMAKE_CXX_COMPILER_ID CMAKE_CXX_COMPILER_VERSION)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ####################################
@@ -71,33 +73,4 @@ ADD_SUBDIRECTORY(test)
 ####################################
 ########## DOCUMENTATION ###########
 ####################################
-OPTION(BUILD_DOCS "Build documentation" ON) # ON/OFF
-IF (TASKSCH_BUILD_WITH_DOCS)
-    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/docs)
-ENDIF ()
-IF (BUILD_DOCS)
-    MESSAGE(CHECK_START "${.y}CMaking Doxygen Documentation${..}")
-    FIND_PACKAGE(Doxygen)
-    IF (DOXYGEN_FOUND)
-        MESSAGE(STATUS "Doxygen found: ${DOXYGEN_EXECUTABLE} -- ${DOXYGEN_VERSION}")
-        # Set Doxygen input and output files.
-        SET(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR})
-        SET(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
-        SET(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIR}/xml/index.xml)
-        SET(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
-        SET(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
-        # Generate DoxyFile from the input file.
-        CONFIGURE_FILE(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)
-        # Create Output directory.
-        FILE(MAKE_DIRECTORY ${DOXYGEN_OUTPUT_DIR})
-        # Command for generating doc from Doxygen config file.
-        ADD_CUSTOM_COMMAND(OUTPUT ${DOXYGEN_INDEX_FILE}
-                COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
-                MAIN_DEPENDENCY ${DOXYFILE_OUT} ${DOXYFILE_IN}
-                COMMENT "Generating Doxygen Documentation"
-                VERBATIM)
-        # Create CMake Target for generating doc.
-        ADD_CUSTOM_TARGET(docs ALL DEPENDS ${DOXYGEN_INDEX_FILE})
-    ENDIF ()
-    MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
-ENDIF ()
+ADD_SUBDIRECTORY(docs)
