--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,10 @@ IF (NOT WIN32)
     SET(.r "${Esc}[31m")
     SET(.g "${Esc}[32m")
     SET(.y "${Esc}[33m")
-    SET(Blue "${Esc}[34m")
-    SET(Magenta "${Esc}[35m")
-    SET(Cyan "${Esc}[36m")
-    SET(White "${Esc}[37m")
+    SET(.b "${Esc}[34m")
+    SET(.m "${Esc}[35m")
+    SET(.c "${Esc}[36m")
+    SET(.w "${Esc}[37m")
     SET(BoldRed "${Esc}[1;31m")
     SET(BoldGreen "${Esc}[1;32m")
     SET(BoldYellow "${Esc}[1;33m")
