--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -4,6 +4,7 @@ IF (TASKSCH_BUILD_WITH_DOCS)
     ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/docs)
 ENDIF ()
 IF (BUILD_DOCS)
+    MESSAGE("${.r}=====> PROCESSING DOCUMENTATION${..}")
     MESSAGE(CHECK_START "${.y}CMaking Doxygen Documentation${..}")
     FIND_PACKAGE(Doxygen)
     IF (DOXYGEN_FOUND)
