first full mm-ADT program written in native language, parsed, shipped to scheduler, evaluated as an mm-ADT typed thread, and shutdown.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,9 @@ IF (NOT WIN32)
     SET(BoldWhite "${Esc}[1;37m")
 ENDIF ()
 
-
 ######## PROJECT LIBRARY
 MESSAGE(CHECK_START "${.y}CMaking ${PROJECT_NAME} Library${..}")
+MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 INCLUDE_DIRECTORIES(src include)
 ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
@@ -40,6 +40,9 @@ TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_std_20)
 TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE NATIVE)
 CMAKE_PRINT_VARIABLES(PROJECT_NAME CMAKE_SOURCE_DIR CMAKE_BINARY_DIR CMAKE_INSTALL_PREFIX CMAKE_CXX_COMPILER_ID CMAKE_CXX_COMPILER_VERSION)
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
+IF (CMAKE_BUILD_TYPE MATCHES "DEBUG")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
+ENDIF ()
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ####################################
 ######## EXTERNAL LIBRARIES ########
@@ -55,6 +58,7 @@ FETCHCONTENT_MAKEAVAILABLE(ordered_map)
 INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/tsl)
 INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_SOURCE_DIR}/include/tsl)
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE tsl::ordered_map)
+
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ### LEXY: DSL PARSING
 #FetchContent_Declare(lexy URL https://lexy.foonathan.net/download/lexy-src.zip)
