--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -38,6 +38,10 @@ IF (BUILD_TESTS)
                     UNITY_BUILD_MODE BATCH
                     UNITY_BUILD_BATCH_SIZE 16)
             TARGET_LINK_LIBRARIES(${PACKAGE_TEST} unity::framework tsl::ordered_map)
+            IF(CMAKE_BUILD_TYPE MATCHES "DEBUG")
+                SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
+                TARGET_LINK_OPTIONS(${PACKAGE_TEST} BEFORE PUBLIC -fsanitize=undefined PUBLIC -fsanitize=address)
+            ENDIF()
             ADD_TEST(${PACKAGE_TEST} ${CMAKE_SOURCE_DIR}/test/build/${PACKAGE_TEST}.out)
             MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
         ENDFOREACH ()
