fixed a bug in Processor and trying to get GitHub actions working still.

--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -15,11 +15,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Build
+    - name: Cmake
       working-directory: ${{github.workspace}}
-      run: cmake .; make
+      run: cmake .
 
-    - name: Test
+    - name: Make
+      working-directory: ${{github.workspace}}
+      run: make
+
+    - name: CTest
       working-directory: ${{github.workspace}}/test
       run: ctest
 
