worked on the CMake build file. No longer doing an in-source build. All compilation and artifacts are generated in a build/ directory for easy cleaning via rm -rf build/.

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ build_flags =
     -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
     -DUNITY_OUTPUT_COLOR
     -DUNITY_INCLUDE_PRINT_FORMATTED
+    -Wno-ambiguous-reversed-operator
 
 
 [esp32]
