--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ INCLUDE(FetchContent)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.28)  # CMake version check
 PROJECT(fhatos)
 SET(CMAKE_CXX_STANDARD 20)
+SET(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
+IF (${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
+    MESSAGE(FATAL_ERROR "In-source builds not allowed. Create a fhatos/build directory and run CMake from there (cmake ..).")
+endif ()
+CMAKE_PRINT_VARIABLES(PROJECT_NAME CMAKE_SOURCE_DIR CMAKE_BINARY_DIR CMAKE_INSTALL_PREFIX CMAKE_CXX_COMPILER_ID CMAKE_CXX_COMPILER_VERSION)
 IF (NOT WIN32)
     STRING(ASCII 27 Esc)
     SET(.. "${Esc}[m")
@@ -22,24 +27,26 @@ IF (NOT WIN32)
     SET(BoldCyan "${Esc}[1;36m")
     SET(BoldWhite "${Esc}[1;37m")
 ENDIF ()
-
 ######## PROJECT LIBRARY
 MESSAGE(CHECK_START "${.y}CMaking ${PROJECT_NAME} Library${..}")
-MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
+IF (NOT CMAKE_BUILD_TYPE)
+    SET(CMAKE_BUILD_TYPE "RELEASE")
+ENDIF ()
+MESSAGE(STATUS "Build type: ${.g}${CMAKE_BUILD_TYPE}${..}")
 INCLUDE_DIRECTORIES(src include)
 ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
-        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build"
-        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build"
-        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build"
+        ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
+        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
         OUTPUT_NAME ${PROJECT_NAME}
         SUFFIX ".out"
 )
 TARGET_SOURCES(${PROJECT_NAME} PRIVATE src/main.cpp)
 TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_std_20)
 TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE NATIVE)
-CMAKE_PRINT_VARIABLES(PROJECT_NAME CMAKE_SOURCE_DIR CMAKE_BINARY_DIR CMAKE_INSTALL_PREFIX CMAKE_CXX_COMPILER_ID CMAKE_CXX_COMPILER_VERSION)
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
+
+INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
 IF (CMAKE_BUILD_TYPE MATCHES "DEBUG")
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
 ENDIF ()
@@ -55,17 +62,11 @@ FETCHCONTENT_DECLARE(
         GIT_TAG v1.1.0
 )
 FETCHCONTENT_MAKEAVAILABLE(ordered_map)
-#INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/tsl)
-INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_SOURCE_DIR}/include/tsl)
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC tsl::ordered_map)
+INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/tsl)
+INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/ordered_map-src/include/tsl/ DESTINATION ${CMAKE_SOURCE_DIR}/include/tsl)
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE tsl::ordered_map)
-
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
-### LEXY: DSL PARSING
-#FetchContent_Declare(lexy URL https://lexy.foonathan.net/download/lexy-src.zip)
-#FetchContent_MakeAvailable(lexy)
-#install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/lexy)
-#install(DIRECTORY ${CMAKE_SOURCE_DIR}/_deps/lexy-src/include/lexy/ DESTINATION ${CMAKE_SOURCE_DIR}/include/lexy)
-#target_link_libraries(${PROJECT_NAME} PRIVATE foonathan::lexy)
 ####################################
 ####################################
 
