--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,3 @@
-PROJECT(fhatos-test)
 OPTION(BUILD_TESTS "Build tests" ON) # ON/OFF
 IF (BUILD_TESTS)
     MESSAGE("${.r}=====> PROCESSING TESTS${..}")
@@ -13,7 +12,8 @@ IF (BUILD_TESTS)
             GIT_TAG v2.6.0
     )
     FETCHCONTENT_MAKEAVAILABLE(unity)
-    # TARGET_LINK_LIBRARIES(fhatos PRIVATE unity::framework)
+    #INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/unity-src/src/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/unity)
+    #INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/unity-src/src/ DESTINATION ${CMAKE_SOURCE_DIR}/include/unity)
     MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
     ###########################################
     ########### TEST SUITE BUILDER ############
@@ -27,21 +27,21 @@ IF (BUILD_TESTS)
             MESSAGE(CHECK_START "${.y}CMaking ${PACKAGE_TEST}${..}")
             ADD_EXECUTABLE(${PACKAGE_TEST} ${CMAKE_SOURCE_DIR}/test/${PACKAGE}/${PACKAGE_TEST}/${PACKAGE_TEST}.cpp)
             ADD_DEFINITIONS("-DNATIVE" "-Wno-ambiguous-reversed-operator")
+            TARGET_LINK_LIBRARIES(${PACKAGE_TEST} unity::framework)
             SET_TARGET_PROPERTIES(${PACKAGE_TEST} PROPERTIES
-                    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/test/build"
-                    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/test/build"
-                    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/test/build"
+                    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/build"
+                    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/build"
+                    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/build"
                     OUTPUT_NAME ${PACKAGE_TEST}
                     SUFFIX ".out"
-                    UNITY_BUILD ON
+                    # UNITY_BUILD ON
                     UNITY_BUILD_MODE BATCH
                     UNITY_BUILD_BATCH_SIZE 16)
-            TARGET_LINK_LIBRARIES(${PACKAGE_TEST} unity::framework tsl::ordered_map)
             IF(CMAKE_BUILD_TYPE MATCHES "DEBUG")
                 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
                 TARGET_LINK_OPTIONS(${PACKAGE_TEST} BEFORE PUBLIC -fsanitize=undefined PUBLIC -fsanitize=address)
             ENDIF()
-            ADD_TEST(${PACKAGE_TEST} ${CMAKE_SOURCE_DIR}/test/build/${PACKAGE_TEST}.out)
+            ADD_TEST(${PACKAGE_TEST} ${CMAKE_BINARY_DIR}/test/build/${PACKAGE_TEST}.out)
             MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
         ENDFOREACH ()
         MATH(EXPR COUNTER "${COUNTER}+${TOTAL}")
