--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -15,6 +15,14 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Fhat-Dev Build
+      working-directory: ${{github.workspace}}
+      run: bin/fhat-dev build
+
+    - name: Fhat-Dev Test
+      working-directory: ${{github.workspace}}
+      run: bin/fhat-dev test
+
     - name: Cmake
       working-directory: ${{github.workspace}}
       run: cmake .
