--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -25,6 +25,16 @@ jobs:
         python -m pip install --upgrade pip
         pip install platformio
 
+    - name: Created Faux WiFi Configuration
+      working-directory: ${{github.workspace}}
+      run: |
+        touch .wifi.ini
+        echo -DWIFI_SSID=fhatos >> .wifi.ini
+        echo -DWIFI_PASS=fhatos >> .wifi.ini
+        echo -DMQTT_BROKER_ADDR=fhatos.org >> .wifi.ini
+        echo -DMQTT_BROKER_PORT=1833 >> .wifi.ini
+        chmod 664 .wifi.ini
+
     - name: Install PlatformIO Library
       run: pio lib install
 
