more cmake github actions.

--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -46,9 +46,9 @@ jobs:
       run: |
         pio lib install
         export PATH=$PATH:$HOME/.local/bin
-        ln -s ~/.platformio/penv/bin/platformio ~/.local/bin/platformio
-        ln -s ~/.platformio/penv/bin/pio ~/.local/bin/pio
-        ln -s ~/.platformio/penv/bin/piodebuggdb ~/.local/bin/piodebuggdb
+        sudo ln -s ~/.platformio/penv/bin/platformio ~/.local/bin/platformio
+        sudo ln -s ~/.platformio/penv/bin/pio ~/.local/bin/pio
+        sudo ln -s ~/.platformio/penv/bin/piodebuggdb ~/.local/bin/piodebuggdb
 
     - name: Fhat-Dev Build
       working-directory: ${{github.workspace}}
