--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -50,7 +50,7 @@ IF (BUILD_TESTS)
     ####################################
     ########### TEST SUITES ############
     ####################################
-    MAKE_TESTS(language "test_binary_obj;test_fluent;test_obj;test_parser")
+    MAKE_TESTS(language "test_fluent;test_obj;test_parser")
     MAKE_TESTS(process "test_scheduler")
     MAKE_TESTS(process/actor "test_actor")
     MAKE_TESTS(process/router "test_router")
