--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ build_flags =
     -DUNITY_OUTPUT_COLOR
     -DUNITY_INCLUDE_PRINT_FORMATTED
     -Wno-ambiguous-reversed-operator
-
+    -I build/_deps/ordered_map-src/include/
 
 [esp32]
 platform = espressif32
