first push on mqtt router implementation for linux/mac native FhatOS. using Paho MQTT fetching via GitHub using CMake Fetch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,19 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE tsl::ordered_map)
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ####################################
 ####################################
+### MQTT: MQTT NETWORK PROTOCOL IMPLEMENTATION
+MESSAGE(CHECK_START "${.y}Making Paho MQTT Library${..}")
+FETCHCONTENT_DECLARE(
+        paho-mqttpp3
+        GIT_REPOSITORY https://github.com/eclipse/paho.mqtt.cpp.git
+        GIT_TAG v1.4.0
+)
+FETCHCONTENT_MAKEAVAILABLE(paho-mqttpp3)
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC paho-mqttpp3)
+INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/paho-mqttpp3-src/include/mqtt DESTINATION ${CMAKE_INSTALL_PREFIX}/include/mqtt)
+INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/paho-mqttpp3-src/include/mqtt DESTINATION ${CMAKE_SOURCE_DIR}/include/mqtt)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE paho-mqttpp3)
+MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 
 ####################################
 ############# TESTING ##############
