created Enums which wraps enums in a class and provides converion ulity between char and enum. much cleaner than having maps everywhere.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,7 +26,7 @@ IF (BUILD_TESTS)
             MATH(EXPR COUNTER "${COUNTER}+1")
             MESSAGE(CHECK_START "${.y}CMaking ${PACKAGE_TEST}${..}")
             ADD_EXECUTABLE(${PACKAGE_TEST} ${CMAKE_SOURCE_DIR}/test/${PACKAGE}/${PACKAGE_TEST}/${PACKAGE_TEST}.cpp)
-            ADD_DEFINITIONS("-DFOS_LOGGING=DEBUG" "-DNATIVE" "-Wno-ambiguous-reversed-operator" "-Wno-error=format-security")
+            ADD_DEFINITIONS("-DFOS_LOGGING=DEBUG" "-DNATIVE" "-Wno-ambiguous-reversed-operator")
             TARGET_LINK_LIBRARIES(${PACKAGE_TEST} unity::framework tsl::ordered_map paho-mqttpp3)
             SET_TARGET_PROPERTIES(${PACKAGE_TEST} PROPERTIES
                     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/build"
@@ -55,6 +55,6 @@ IF (BUILD_TESTS)
     MAKE_TESTS(process/actor "test_actor")
     MAKE_TESTS(process/router "test_router")
     MAKE_TESTS(structure "test_furi")
-    MAKE_TESTS(util "test_mutex")
+    # MAKE_TESTS(util "test_mutex")
     MESSAGE(STATUS "Total tests produced: ${.g}${TOTAL}${..}")
 ENDIF ()
