--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ IF (BUILD_NATIVE)
     )
     TARGET_SOURCES(${PROJECT_NAME} PRIVATE src/main.cpp)
     TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_std_20)
-    ADD_DEFINITIONS("-DNATIVE" "-Wno-ambiguous-reversed-operator" "-Wno-error=format-security")
+    ADD_DEFINITIONS("-DNATIVE" "-Wno-ambiguous-reversed-operator")
     INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
     IF (CMAKE_BUILD_TYPE MATCHES "DEBUG")
         SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
