added group() instruction. started a new test_insts test suite. much easier to write instruction-specific tests with associated helper methods.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -51,7 +51,7 @@ IF (BUILD_TESTS)
     ########### TEST SUITES ############
     ####################################
     MAKE_TESTS(abc "test_abc")
-    MAKE_TESTS(language "test_fluent;test_obj;test_parser")
+    MAKE_TESTS(language "test_fluent;test_obj;test_parser;test_insts")
     MAKE_TESTS(process "test_scheduler")
     MAKE_TESTS(process/actor "test_actor")
     MAKE_TESTS(process/router "test_router")
