--- a/platformio.ini
+++ b/platformio.ini
@@ -101,14 +101,14 @@ upload_port = 192.168.88.224
 [env:native]
 platform = native
 framework =
-lib_deps =
-#    eclipse/Paho @ ^1.0.0
 upload_protocol =
+lib_deps =
 build_flags =
     ${common.build_flags}
     ${env.build_flags}
     -std=gnu++2a
     -DNATIVE
+    -I build/_deps/paho-mqttpp3-src/include/
 test_filter =
     #language/test_parser
     #language/test_fluent
