--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -46,8 +46,6 @@ jobs:
       run: |
         pio lib install
         export PATH=$PATH:$HOME/.local/bin
-        sudo ln -s ~/.platformio/penv/bin/pio ~/.local/bin/pio
-        sudo ln -s ~/.platformio/penv/bin/piodebuggdb ~/.local/bin/piodebuggdb
 
     - name: Fhat-Dev Build
       working-directory: ${{github.workspace}}
@@ -67,6 +65,8 @@ jobs:
         chmod 777 bin/fhat-dev
         sudo bin/fhat-dev test native
 
+#        sudo ln -s ~/.platformio/penv/bin/pio ~/.local/bin/pio
+ #       sudo ln -s ~/.platformio/penv/bin/piodebuggdb ~/.local/bin/piodebuggdb
 #        sudo ln -s ~/.platformio/penv/bin/platformio ~/.local/bin/platformio
  #   - name: Cmake
  #     working-directory: ${{github.workspace}}
