--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -56,6 +56,6 @@ IF (BUILD_TESTS)
     MAKE_TESTS(process/actor "test_actor")
     MAKE_TESTS(process/router "test_router")
     MAKE_TESTS(structure "test_furi")
-    # MAKE_TESTS(util "test_mutex")
+    MAKE_TESTS(util "test_mutex")
     MESSAGE(STATUS "Total tests produced: ${.g}${TOTAL}${..}")
 ENDIF ()
