have markdown code runner integrated into build where code snipprts are executed in FhatOS out stdout written to respective markdown code block.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,4 +108,5 @@ ADD_SUBDIRECTORY(test)
 ####################################
 ########## DOCUMENTATION ###########
 ####################################
+SET(BUILD_DOCS ON)
 ADD_SUBDIRECTORY(docs)
